add "defaultSelectedItems" arg examples

--- a/README.Rmd
+++ b/README.Rmd
@@ -136,9 +136,11 @@ RichTreeView(
 
 As `createTree()` is adapted from [`shinyWidgets::create_tree()`](https://dreamrs.github.io/shinyWidgets/reference/create_tree.html), I want to thank the authors of shinyWidgets for their amazing work!
 
-### Rich Tree View node expanded
+### Rich Tree View default selection and expand
 
-You can expand by default one or multiple nodes with the `defaultExpandedItems` argument by providing its related IDs.
+Select by default one or multiple items with the `defaultSelectedItems` argument by providing its related IDs.
+
+You can also expand by default one or multiple nodes with the `defaultExpandedItems` argument by providing its related IDs.
 
 ```r
 df <- data.frame(
@@ -149,9 +151,13 @@ df <- data.frame(
 
 treeItems <- createTree(df)
 
+defaultSelectedId <- treeItems[[1]]$children[[1]]$id
+defaultExpandedId <- treeItems[[1]]$id
+
 RichTreeView(
   items = treeItems,
-  defaultExpandedItems = list(treeItems[[1]]$id) # always in list()
+  defaultSelectedItems = list(defaultSelectedId), # always in list()
+  defaultExpandedItems = list(defaultExpandedId) # always in list()
 )
 ```
 
@@ -173,6 +179,8 @@ df <- data.frame(
 )
 
 treeItems <- createTree(df)
+defaultExpanded <- treeItems[[1]]$id
+defaultSelectedId <- treeItems[[1]]$children[[1]]$id
 
 ui <- tagList(
   reactOutput("tree"),
@@ -184,16 +192,37 @@ server <- function(input, output, session) {
     RichTreeView(
       items = treeItems,
       # expand by default a node with its id
-      defaultExpandedItems = list(treeItems[[1]]$id), # always in list()
+      defaultSelectedItems = list(defaultSelectedId), # always in list()
+      defaultExpandedItems = list(defaultExpanded), # always in list()
       onItemSelectionToggle = setInput(
         inputId = "itemSelection", 
         jsAccessor = "[1]"
       )
     )
   })
+  
+  # Reproduce logic from official MUI's documentation
+  selectedItems <- reactiveValues(
+    selected = defaultSelectedId
+  )
+  
+  observeEvent(input$itemSelection, {
+    current_selection <- input$itemSelection
+    
+    if(current_selection %in% selectedItems$selected) {
+      # Remove if already selected
+      new_selection <- setdiff(selectedItems$selected, current_selection)
+    } else {
+      # Add if not selected
+      new_selection <- c(selectedItems$selected, current_selection)
+    }
+    
+    selectedItems$selected <- new_selection
+  })
+  
   output$info <- shiny::renderPrint(
     # remove random ID to return only item label name
-    gsub(pattern = "\\-.*$", replacement = "", x = input$itemSelection)
+    gsub(pattern = "\\-.*$", replacement = "", x = selectedItems$selected)
   )
 }
 
@@ -217,6 +246,9 @@ df <- data.frame(
 
 treeItems <- createTree(df)
 
+defaultExpandedId <- treeItems[[1]]$id
+defaultSelectedId <- treeItems[[1]]$children[[1]]$children[[1]]$id
+
 ui <- tagList(
   reactOutput("tree"),
   verbatimTextOutput("info")
@@ -229,10 +261,10 @@ server <- function(input, output, session) {
       multiSelect = TRUE,
       items = treeItems,
       # expand by default a node with its id
-      defaultExpandedItems = list(treeItems[[1]]$id), # always in list()
-      # By default, selecting a parent item does not select its children.
+      defaultExpandedItems = list(defaultExpandedId), # always in list()
+      defaultSelectedItems = list(defaultSelectedId), # always in list()
+      # By default, selecting a item does not select its children.
       selectionPropagation = list(
-        parents = TRUE, 
         descendants = TRUE
       ),
       onItemSelectionToggle = shiny.react::setInput(
@@ -243,8 +275,9 @@ server <- function(input, output, session) {
   })
   
   # Reproduce logic from official MUI's documentation
-  selectedItems <- reactiveValues()
-  selectedItems$selected <- NULL
+  selectedItems <- reactiveValues(
+    selected = defaultSelectedId
+  )
   
   observeEvent(input$itemSelection, {
     current_selection <- input$itemSelection
