improve SimpleTreeView() example

--- a/README.Rmd
+++ b/README.Rmd
@@ -161,6 +161,43 @@ RichTreeView(
 )
 ```
 
+### Simple Tree View
+
+Using `SimpleTreeView()` with `TreeItem()`, you can easily customize items with icons for example:
+
+```r
+SimpleTreeView(
+  defaultExpandedItems = list("documents"), # always in list()
+  defaultSelectedItems = list("notes"), # always in list()
+  TreeItem(
+    itemId = "documents", 
+    label = div(shiny::icon("folder"), " Documents"),
+    TreeItem(
+      itemId = "notes", 
+      label = div(shiny::icon("file"), " Notes")
+    ),
+    TreeItem(
+      itemId = "images", 
+      label = div(shiny::icon("image"), " Images")
+    ),
+    TreeItem(
+      itemId = "videos", 
+      label = div(shiny::icon("video"), " Videos")
+    )
+  ),
+  TreeItem(
+    itemId = "history", 
+    label = div(shiny::icon("history"), " History")
+  ),
+  TreeItem(
+    itemId = "trash", 
+    label = div(shiny::icon("trash"), " Trash")
+  )
+)
+```
+
+<img src="man/figures/simpleTreeView.png" alt="multiple clicked" style="padding:1px;border:thin solid black;"/>
+
 ## Usage with Shiny
 
 You can get user item clicked in Shiny using the `onItemSelectionToggle` argument (more info [here](https://mui.com/x/react-tree-view/rich-tree-view/selection/#track-item-selection-change)), by creating a "itemSelection" input with `shiny.react::setInput()`.
@@ -305,30 +342,9 @@ shinyApp(ui, server)
 
 <img src="man/figures/itemMultipleClicked.png" alt="multiple clicked" style="padding:1px;border:thin solid black;"/>
 
-### MUI Simple Tree View
-
-Use `SimpleTreeView()` with `TreeItem()`:
-
-```r
-SimpleTreeView(
-  TreeItem(
-    itemId = "muiTreeView-1", 
-    label = "muiTreeView",
-    TreeItem(
-      itemId = "SimpleTreeView-2", 
-      label = "SimpleTreeView"
-    ),
-    TreeItem(
-      itemId = "RichTreeView-3", 
-      label = "RichTreeView"
-    )
-  )
-)
-```
-
 ### More features
 
-Explore the [official MUI Tree View documentation](https://mui.com/x/react-tree-view/rich-tree-view) to see how more features can be added.
+Explore the [official MUI Tree View documentation](https://mui.com/x/react-tree-view/) to see how more features can be added.
 
 ### Use other MUI products
 
