improve custom style examples

--- a/README.Rmd
+++ b/README.Rmd
@@ -171,7 +171,8 @@ RichTreeView(
   sx = list(
     ".MuiTreeItem-root" = list(
       ".Mui-selected, .Mui-selected:hover, .Mui-focused.Mui-selected" = list(
-        background = "red"
+        background = "red",
+        color = "white"
       )
     )
   )
@@ -201,11 +202,23 @@ SimpleTreeView(
     ),
     TreeItem(
       itemId = "images", 
-      label = div(shiny::icon("image"), " Images")
+      label = div(shiny::icon("image"), " Images"),
+      sx = list(
+        ".Mui-selected, .Mui-selected:hover, .Mui-focused.Mui-selected" = list(
+          background = "lightgreen",
+          color = "white"
+        )
+      )
     ),
     TreeItem(
       itemId = "videos", 
-      label = div(shiny::icon("video"), " Videos")
+      label = div(shiny::icon("video"), " Videos"),
+      sx = list(
+        ".Mui-selected, .Mui-selected:hover, .Mui-focused.Mui-selected" = list(
+          background = "lightblue",
+          color = "white"
+        )
+      )
     )
   ),
   TreeItem(
