Improve vignette. Fix URL links. Ignore vignettes in build.

--- a/README.Rmd
+++ b/README.Rmd
@@ -40,7 +40,7 @@ You can install the development version of muiTreeView like so:
 remotes::install_github("lgnbhl/muiTreeView")
 ```
 
-**Read the full documentation with examples [here](https://lgnbhl.github.io/muiTreeView/articles/introduction.html).**
+**Read the full documentation with examples [here](https://felixluginbuhl.com/muiTreeView/).**
 
 ## Basic example
 
@@ -70,6 +70,6 @@ RichTreeView(
 
 ## Contribute
 
-If you have any issue, question or want to contribute with a pull request, don't hesitate to write me on https://github.com/lgnbhl/muiTreeView
+If you have any issue, question or want to contribute with a pull request, don't hesitate to write me on https://github.com/lgnbhl/muiTreeView.
 
 For updates follow [Felix Luginbuhl](https://linkedin.com/in/FelixLuginbuhl) on LinkedIn.
